scripts/todo.txt
Fedora 33 - To be fixed:

BespokeSynth	-> JUCE was missing + lto-wrapper -> to fix directly on fedora 33 ... wait until gcc update
performer	-> cmake + ui_setlist.h missing - pb cmake 3.18 ...
qscintilla	-> fail to build for qt4
miniaudicle	-> qscintilla was missing
sonic-pi	-> cmake - check ruby version

Add new packages:
 Element
 Dplug
 SmartGuitarAmp -> https://github.com/keyth72/SmartGuitarAmp
 improviz-performance -> https://github.com/rumblesan/improviz-performance
 osmid -> https://github.com/llloret/osmid
 Squeezer -> https://github.com/mzuther/Squeezer
 DAFx19-Gamelanizer/ -> https://github.com/lukemcraig/DAFx19-Gamelanizer
 ladspa-t5-plugins -> https://gitlab.com/t-5/ladspa-t5-plugins
 OwlSim -> https://github.com/pingdynasty/OwlSim
 slplugins -> https://github.com/figbug/slplugins
 DeLooper -> https://github.com/sonejostudios/DeLooper
 morphex -> https://github.com/MarcSM/morphex
 CF3 -> https://github.com/MtnViewJohn/context-free.git
 minicomputer -> http://minicomputer.sourceforge.net/
 freqtweak
 dexed
 mephisto -> https://open-music-kontrollers.ch/lv2/mephisto/
 xmonk -> https://github.com/brummer10/Xmonk.lv2
 
 supercollider-study -> https://github.com/rumblesan/super-collider-study
 
Add source.sh file in spec file:
Source1: source.sh

Add check section:
%check
desktop-file-validate %{buildroot}%{_datadir}/applications/*.desktop

JUCE:
set the default path for:
Projucer --set-global-search-path linux defaultJuceModulePath /usr/src/JUCE/modules/
And set some other folders ...
Lokk at .config/Projucer/Projucer.settings

Fix debug generation:

purr-data/purr-data.spec	has a pure binary dependency
improviz/improviz.spec 		(Cabal ...)
processing/processing.spec	precompiled java package

plebtracker/plebtracker.spec	(???)
airwindows/airwindows.spec 	(???)
amuc/amuc.spec 			(???)
ams-lv2/lvtk.spec 		(???)
psi-plugins 			error with fedora 33 + lv2-devel
ninjam/ninjam-client.spec 	(???)
ninjam/abninjam.spec 		(???)
ninjam/ninjam-server.spec 	(???)
zytrax/zytrax.sp<ec		(???)
iannix/iannix.spec		(???) - pb with qmake-qt5
mv-6pm/mv-6pm.spec		(???) - pb with qmake-qt5
oxefmsynth/oxefmsynth.spec	(???) - pb with debugsource ...
mx44/mx44.spec			no more source. Put the source on github ...
rack				fail with some fedora flags
tunefish/tunefish.spec		(???) - maybe because it's a vst
surge/stochas.spec		juce maybe ...
ryukau/ryukau.spec		gcc hangs during compilation of parameter.cpp
orca/orca.spec			really special build system
socallab/SocaLabs-plugins.spec	build fails because of a juce path
qutecsound/qutecsound.spec	(???) - pb with qmake-qt5
picoloop/picoloop.spec		complex ...
kxstudio/drmr.spec		cmake pb with strip probably
kxstudio/protrekkr.spec		(???)

openframeworks/openframeworks.spec
performer/performer.spec
zrythm/libcyaml.spec
zrythm/zrythm.spec
ossia/ossia-score.spec
odin2/odin2.spec

Cadence:
../widgets/pixmapdial.cpp: In member function 'virtual void PixmapDial::paintEvent(QPaintEvent*)':
../widgets/pixmapdial.cpp:231:26: error: aggregate 'QPainterPath ballPath' has incomplete type and cannot be defined
  231 |             QPainterPath ballPath;
      |                          ^~~~~~~~
../widgets/pixmapdial.cpp:278:26: error: aggregate 'QPainterPath ballPath' has incomplete type and cannot be defined
  278 |             QPainterPath ballPath;
      |                          ^~~~~~~~
